demo-pod.yaml
# Save the output of this file and use kubectl create -f to import
# it into Kubernetes.
#
# Created with podman-5.7.0
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-09-25T07:52:12Z"
  labels:
    app: demo-pod
  name: demo-pod
spec:
  containers:
  - args:
    - nginx
    - -g
    - daemon off;
    image: docker.io/nginxdemos/hello:latest
    name: demo
