pg-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pg-demo-allow-only-hello
spec:
  podSelector:
    matchLabels:
      app: pg-demo          # this policy applies TO pods carrying this label
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hello-web     # only pods labeled app=hello-web may initiate connections in
    ports:
    - protocol: TCP
      port: 5432
